k8s/overlays/dev/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rest-api-template
  namespace: 
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts: rest-api-dev
  
  rules:
    - host: rest-api-dev
      http:
        paths:
          - path: /
            backend:
              serviceName: rest-api-template-svc
              servicePort: 8080
